# deployment_demo_model_training

./: README.md  pyproject.toml
src/: main.py
src/data/: data_loader.py  data_processor.py  data_splitter.py
src/model/: evaluator.py  saver.py  trainer.py
