[tool.poetry]
name = "pima-diabetes-trainer"
version = "0.1.0"
description = "\"Pipeline de entrenamiento para Pima diabetes dataset\""
authors = ["iair <i.linker8@gmail.com>"]
license = "\"APACHE 2.0\""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
xgboost = "^2.1.3"
joblib = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
